[tool.poetry]
name = "wife_alert"
version = "0.1.0"
description = ""
authors = ["KGB33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pre-commit = "^2.7.1"
flask-wtf = "^0.14.3"
flask-bootstrap = "^3.3.7"
rq = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
